Revise index.html for ENEM challenge page
Updated the HTML structure and content for the ENEM challenge page.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <header class="pt-28 pb-16 border-b border-roxo text-center px-6">
   <h1 class="text-4xl sm:text-6xl font-extrabold"><span class="text-amarelo">DESAFIO +900</span> NA REDAÇÃO ENEM</h1>
   <p class="mt-4 text-lg max-w-3xl mx-auto text-gray-200">Participe do desafio que transforma estudantes comuns em candidatos preparados para tirar acima de 900 — mesmo começando do zero.</p>
-  <a href="#cta" class="mt-8 inline-block px-12 py-4 text-lg font-bold text-white bg-roxo rounded-lg hover:scale-105 transition animate-pulse-purple">QUERO PARTICIPAR DO DESAFIO</a>
+  <a href="https://pay.cakto.com.br/a4axup6_668640" class="mt-8 inline-block px-12 py-4 text-lg font-bold text-white bg-roxo rounded-lg hover:scale-105 transition animate-pulse-purple">QUERO PARTICIPAR DO DESAFIO</a>
 </header>
 
 <!-- VÍDEO -->
@@ -118,7 +118,7 @@
 <!-- CTA FINAL -->
 <footer id="cta" class="py-20 bg-preto border-t border-roxo text-center">
   <h2 class="text-3xl font-bold mb-6">Pronto para entrar no Desafio?</h2>
-  <a href="https://pay.cakto.com.br/38zjkk4_650166" class="inline-block px-14 py-5 text-xl font-bold bg-roxo text-white rounded-xl hover:scale-105 transition animate-pulse-purple">QUERO COMEÇAR AGORA</a>
+  <a href="https://pay.cakto.com.br/a4axup6_668640" class="inline-block px-14 py-5 text-xl font-bold bg-roxo text-white rounded-xl hover:scale-105 transition animate-pulse-purple">QUERO COMEÇAR AGORA</a>
   <p class="text-gray-500 mt-8 text-sm">Caveira Redação © 2025 — Todos os direitos reservados.</p>
 </footer>
 
@@ -135,3 +135,4 @@ setInterval(() => {
 
 </body>
 </html>
+
